--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </a>
 
         <a 
-          href="https://aethervitae.streamlit.app/"
+          href="https://aethrvitae-bot.streamlit.app/"
           target="_blank"
           rel="noopener noreferrer"
           class="hover-scale w-full md:w-96 flex items-center justify-center space-x-3 text-center font-orbitron text-lg font-bold tracking-wider uppercase border-2 rounded-lg px-8 py-5 border-bio-400 text-bio-400 hover:bg-bio-400 hover:text-space-900"
@@ -262,4 +262,5 @@
     });
   </script>
 </body>
+
 </html>
