--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
       <div class="flex flex-col items-center space-y-6">
         <a 
-          href="corious.html"
+          href="curious.html"
           class="hover-scale w-full md:w-96 flex items-center justify-center space-x-3 text-center font-orbitron text-lg font-bold tracking-wider uppercase border-2 rounded-lg px-8 py-5 border-energy-500 text-energy-500 hover:bg-energy-500 hover:text-space-900"
         >
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
